# jepa-carracing

./: LICENSE  README.md  pyproject.toml
proof/: PROOF.md  carracing_eval_curve.csv
proof/runs/jepa_ppo_20260312_085953/: config.json
proof/runs/jepa_ppo_20260312_085953/eval_logs/: evaluations.npz
proof/runs/jepa_ppo_resume_300k/: config.json
proof/runs/jepa_ppo_resume_300k/eval_logs/: evaluations.npz
scripts/: setup.sh
src/: __init__.py  eval_jepa_ppo.py  jepa_encoder.py  train_jepa_ppo.py  vjepa_obs_wrapper.py
